# paperweight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: issue-analyzer.md  issue-reviewer.md
.github/workflows/: ci.yml  claude-review.yml
projects/: devscout.yaml  example.yaml  fintech.yaml  jarvis.yaml  momease.yaml  paperweight.yaml  primeleague.yaml  sekit.yaml
src/agents/: agent_routes.py  aggregator.py  app_state.py  auth.py  auth_middleware.py  auth_routes.py  budget.py  cleanup.py  config.py  config_writer.py  (+41 more)
tests/: conftest.py  test_agent_endpoint.py  test_aggregator.py  test_auth.py  test_budget.py  test_bug19_stuck_running.py  test_bug21_session_reuse.py  test_chat_ui.py  test_cleanup.py  test_composite_macros.py  test_concurrency_e2e.py  test_config.py  test_config_writer.py  test_coordination_broker.py  test_coordination_claims.py  test_coordination_e2e.py  test_coordination_integration.py  test_coordination_mediator.py  test_coordination_models.py  test_coordination_protocol.py  test_dashboard.py  test_dashboard_coordination.py  test_dashboard_formatters.py  test_dashboard_html.py  test_db_version.py  test_discord_notifier.py  test_discovery.py  test_discovery_extended.py  test_discovery_fuzzy.py  test_executor.py  test_executor_e2e.py  test_executor_pr.py  test_github_client.py  test_github_issues.py  test_github_oauth.py  test_github_repos.py  test_github_webhook_feedback.py  test_golden_path.py  test_health_deep.py  test_history.py  (+33 more)
(+107 files in other folders)
